Add support for Gradle 9.4