@@ -18,140 +18,65 @@ buildscript {
 	}
 }
 
-apply plugin: 'org.jetbrains.kotlin.jvm'
-apply plugin: 'java-gradle-plugin'
-apply plugin: 'com.vanniktech.maven.publish'
-apply plugin: 'org.jetbrains.dokka'
-apply plugin: 'com.diffplug.spotless'
-apply plugin: 'com.android.lint'
-apply plugin: 'com.github.gmazzo.buildconfig'
-apply plugin: 'com.gradleup.tapmoc'
-
-gradlePlugin {
-	plugins {
-		testDistribution {
-			id = 'com.jakewharton.test-distribution'
-			displayName = 'Test Distribution'
-			description = 'Gradle plugin which creates distributions of JVM unit tests'
-			implementationClass = 'com.jakewharton.testdistribution.TestDistributionPlugin'
-		}
-	}
-}
-
-kotlin {
-	explicitApi()
-
-	abiValidation {
-		enabled = true
-	}
-}
-
-tasks.named('validatePlugins') {
-	enableStricterValidation = true
-}
-
-dependencies {
-	compileOnly libs.kotlin.gradlePlugin
-	compileOnly libs.android.gradlePlugin
-
-	testImplementation libs.junit
-	testImplementation libs.assertk
-	testImplementation libs.testParameterInjector
-
-	lintChecks libs.androidx.gradlePluginLints
-}
-
-repositories {
-	mavenCentral()
-	google()
-}
-
-// HEY! If you update the minimum-supported Gradle version check to see if the Kotlin language version or
-// Java targets below can be bumped. See https://docs.gradle.org/current/userguide/compatibility.html.
-def minimumGradleVersion = '9.0'
-configurations.apiElements {
-	attributes {
-		attribute(
-			GradlePluginApiVersion.GRADLE_PLUGIN_API_VERSION_ATTRIBUTE,
-			objects.named(GradlePluginApiVersion, minimumGradleVersion),
-		)
-	}
-}
-
-apply plugin: 'com.gradleup.tapmoc'
-tapmoc {
-	java(17)
-	kotlin('2.2.0')
-	checkApiDependencies(Severity.ERROR)
-	checkRuntimeDependencies(Severity.ERROR)
-}
-
-tasks.withType(KotlinJvmCompile).configureEach { task ->
-	task.compilerOptions {
-		jvmDefault = JvmDefaultMode.NO_COMPATIBILITY
-	}
-}
-
-buildConfig {
-	useKotlinOutput {
-		packageName = 'com.jakewharton.testdistribution'
-		internalVisibility = true
-		topLevelConstants = true
-	}
-
-	sourceSets.getByName('test') {
-		buildConfigField(String, "PLUGIN_VERSION", VERSION_NAME)
-		buildConfigField(String, 'MINIMUM_GRADLE_VERSION', minimumGradleVersion)
-	}
-}
-
-tasks.named('test') {
-	dependsOn(':publishAllPublicationsToTestingRepository')
-	inputs.dir('src/test/fixtures')
-
-	testLogging {
-		if (System.getenv('CI') == 'true') {
-			events = ['failed', 'skipped', 'passed']
-		}
-		exceptionFormat 'full'
-	}
-
-	// Required to test configuration cache in tests when using withDebug()
-	// https://github.com/gradle/gradle/issues/22765#issuecomment-1339427241
-	jvmArgs(
-		"--add-opens",
-		"java.base/java.util=ALL-UNNAMED",
-		"--add-opens",
-		"java.base/java.util.concurrent.atomic=ALL-UNNAMED",
-		"--add-opens",
-		"java.base/java.lang.invoke=ALL-UNNAMED",
-		"--add-opens",
-		"java.base/java.net=ALL-UNNAMED",
-	)
-}
-
-tasks.named('check') { check ->
-	// TODO: https://youtrack.jetbrains.com/issue/KT-78525
-	check.dependsOn(tasks.named('checkLegacyAbi'))
-}
-
-publishing {
+subprojects {
 	repositories {
+		mavenCentral()
+		google()
 		maven {
-			name = 'testing'
-			url = "${rootProject.projectDir}/build/localMaven"
+			url 'https://repo.gradle.org/gradle/libs-releases'
+			metadataSources {
+				mavenPom()
+				ignoreGradleMetadataRedirection()
+			}
 		}
 	}
-}
 
-spotless {
-	kotlin {
-		target('**/*.kt')
-		targetExclude('**/src/test/test-build-logic/build/**', '**/generated-sources/**')
-		ktlint(libs.ktlint.get().version).editorConfigOverride([
-			'ktlint_standard_filename'                : 'disabled',
-			// Making something an expression body should be a choice around readability.
-			'ktlint_standard_function-expression-body': 'disabled',
-		])
+	pluginManager.withPlugin('org.jetbrains.kotlin.jvm') {
+		apply plugin: 'com.gradleup.tapmoc'
+		tapmoc {
+			java(17)
+			kotlin('2.2.0')
+			checkApiDependencies(Severity.ERROR)
+			checkRuntimeDependencies(Severity.ERROR)
+		}
+	}
+
+	tasks.withType(KotlinJvmCompile).configureEach { task ->
+		task.compilerOptions {
+			jvmDefault = JvmDefaultMode.NO_COMPATIBILITY
+		}
+	}
+
+	tasks.withType(Test).configureEach {
+		testLogging {
+			if (System.getenv('CI') == 'true') {
+				events = ['failed', 'skipped', 'passed']
+			}
+			exceptionFormat 'full'
+		}
+	}
+
+	pluginManager.withPlugin('com.vanniktech.maven.publish') {
+		publishing {
+			repositories {
+				maven {
+					name = 'testing'
+					url = "${rootProject.projectDir}/build/localMaven"
+				}
+			}
+		}
+	}
+
+	apply plugin: 'com.diffplug.spotless'
+	spotless {
+		kotlin {
+			target('**/*.kt')
+			targetExclude('**/src/test/test-build-logic/build/**', '**/generated-sources/**')
+			ktlint(libs.ktlint.get().version).editorConfigOverride([
+				'ktlint_standard_filename'                : 'disabled',
+				// Making something an expression body should be a choice around readability.
+				'ktlint_standard_function-expression-body': 'disabled',
+			])
+		}
 	}
 }
